...
                        } label: {
                            Image(systemName: "pencil")
                                .imageScale(.large)
                                .bold()
                                .frame(minWidth: 44, minHeight: 40)
                        }
                        .accessibilityIdentifier("editNameOrAisleButton")
                        .accessibilityLabel(.editNameOrAisle)

                        Text(.in(viewModel.name, viewModel.aisle))
                            .font(.subheadline)
                            .frame(maxWidth: .infinity, alignment: .leading)
                    }
...
                stockButton(increase: true)
            }
            .buttonLoader(isLoading: $viewModel.updatingStock)
            .textFieldError(value: $viewModel.stock, error: $viewModel.stockError, isFocused: _stockIsFocused)
            
            if viewModel.stock != viewModel.stockBackup && !viewModel.updatingStock {
                updateStockButton
                    .transition(.opacity.combined(with: .scale))
            }
        }
        .animation(reduceMotion ? .none : .default, value: viewModel.stock)
    }

...
            Image(systemName: increase ? "plus" : "minus")
                .font(.title)
                .foregroundStyle(.white)
                .frame(width: 60, height: 60)
                .background(.plainButton, in: Circle())
        }
        .accessibilityIdentifier(increase ? "increaseStockButton" : "decreaseStockButton")
        .accessibilityLabel(increase ? .addOneToStock : .removeOneFromStock)
        .padding(.horizontal, increase ? 0 : 16)
    }

    var updateStockButton: some View {
        Button(.updateStock) {
...
