...
        if isLoading || historyError != nil {
            VStack {
                ErrorView(message: historyError?.error)
                Button(.retry) {
                    action()
                }
                .accessibilityIdentifier("RetrySendHistoryButton")
                .buttonStyle(MediPlainButtonStyle())
                .buttonLoader(isLoading: $isLoading)
                .padding(.horizontal, 48)
                .padding(.bottom)
            }
        }
...
